@@ -27,7 +27,12 @@ software-center (3.1.3) UNRELEASED; urgency=low
   * softwarecenter/view/historypane.py:
     - use 'updated' instead of 'upgraded' (LP: #635196)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 23 Nov 2010 15:02:23 +0100
+  [ Gary Lasker ]
+  * softwarecenter/app.py:
+    - remove unused code; we don't lazy-load entire history pane, rather
+      we create the pane UI but then load/parse apthistory on demand
+
+ -- Gary Lasker <gary.lasker@canonical.com>  Wed, 24 Nov 2010 17:28:24 -0500
 
 software-center (3.1.2) natty; urgency=low
 
